# esdl4tulipa

./: .gitignore  CITATION.cff  README.dev.md  README.md  pyproject.toml  requirements-docs.txt
.github/workflows/: python-tests.yml
src/esdl4tulipa/: __init__.py  db.py  mapping.py  parser.py  profiles.py
tests/: ruff.toml  test_db.py  test_mapping.py  test_parser.py
tests/data/esdl/: Tiny.esdl  TinyTest EDR Profiles.esdl  eye_simulation.esdl  norse-mythology-edr-profiles.esdl  norse-mythology-good.esdl  vehicle_charging_etc.esdl  vehicle_charging_etc_edr_profiles.esdl
